# pybvh-ml

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
bvh_data/: bvh_example.bvh  bvh_test1.bvh  bvh_test2.bvh  bvh_test3.bvh  standard_skeleton.bvh
pybvh_ml/: __init__.py  _staged.py  augmentation.py  convert.py  metadata.py  packing.py  pipeline.py  preprocessing.py  sequences.py  skeleton.py
pybvh_ml/torch/: __init__.py  collate.py  datasets.py
tests/: test_no_pybvh_deprecation.py  test_pybvh_ml.py
tutorials/: 01_end_to_end_pipeline.ipynb  01_end_to_end_pipeline.py  02_augmentation_visualized.ipynb  02_augmentation_visualized.py  03_heterogeneous_preprocessing.ipynb  03_heterogeneous_preprocessing.py
