[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybvh-ml"
version = "0.3.0"
description = "ML bridge layer for pybvh — tensor packing, augmentation, preprocessing, and PyTorch datasets for motion capture data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Victor Schneider", email = "victor.schneider67@gmail.com" }]
keywords = ["bvh", "motion capture", "machine learning", "deep learning", "skeleton", "augmentation", "dataset"]
dependencies = [
    "pybvh>=0.6.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
hdf5 = ["h5py>=3.0"]
dev = [
    "pytest>=8",
    "torch>=2.0",
    "h5py>=3.0",
    "nbmake>=1.5",
    "jupyter>=1.0",
    "jupytext>=1.16",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/VictorS-67/pybvh-ml"
Repository = "https://github.com/VictorS-67/pybvh-ml"
Issues = "https://github.com/VictorS-67/pybvh-ml/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
pybvh_ml = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pybvh_ml*"]
